# monty-stac-extension

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  DOCS.md  README.md  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sources.json
.github/: remark-docs.yaml  remark.yaml
.github/prompts/: research-response-taxonomy.md
.github/remark-plugins/: mute-heading-in-file.mjs
.github/workflows/: deploy_mkdocs.yml  test.yaml
docs/: index.md
docs/examples/: index.md
docs/model/: README.md  correlation_identifier.md  generate_taxonomy_tables.py  global_identififer.md  response-best-practices.md  response-impact-boundary.md  response-taxonomy.md  taxonomy.md
docs/styles/: extra.css
examples/: collection.json  index.html  index.md  item-hazard-eq-CHN.json  item-ref-event-flood-PAR.json  item-source-event-eq-CHN-glide.json  item-source-event-flood-PAR-GLIDE.json
examples/_response-impact-pairing/: impact-EMSR-DEMO-001-buildings-destroyed.json  impact-EMSR-DEMO-001-people-affected.json  impacts.json  response-EMSR-DEMO-001-GRA.json  responses.json
examples/alerthub-events/: alerthub-events.json  event-av.json
json-schema/: schema.json
model/: Montandon_JSON-Example.json  README.md  correlation_identifier.md  event_paring.md  generate_taxonomy_tables.py  index.html  model.md  questions.md  sources.md  taxonomy.md
scripts/: check-link-types.mjs  check_hazard_codes.py  gen_sources_index.py  setup.sh
search/: search_index.json
v0.1.0/: schema.json
v1.0.0/: schema.json
v1.0.1/: schema.json
v1.1.1/: schema.json
(+201 files in other folders)
