[project]
name = "monty-stac-extension"
version = "1.0.0"
description = "Monty STAC Extension"
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-mermaid2-plugin>=1.0.0",
    "markdown-callouts>=0.4.0",
    "pymdown-extensions>=10.0",
]

[tool.ruff]
line-length = 100
